bindings/c/spatial_codecs_interops.h

// Automatically generated by Interoptopus.

#ifndef SPATIAL_CODECS_INTEROPS_H
#define SPATIAL_CODECS_INTEROPS_H

#ifdef __cplusplus
extern "C" {
#endif

#include <stdint.h>
#include <stdbool.h>




/// Status codes for FFI calls.
typedef enum pcstatus
    {
    PCSTATUS_OK = 0,
    PCSTATUS_NULLPOINTER = 1,
    PCSTATUS_INVALIDSLICE = 2,
    PCSTATUS_DECODEFAILED = 3,
    PCSTATUS_SIZEOVERFLOW = 4,
    PCSTATUS_PANIC = 5,
    } pcstatus;

/// Opaque, heap-allocated encoding parameters.
///
/// This keeps the C ABI stable while still allowing callers to configure codecs.
/// Create an instance once (e.g. per thread) and reuse it to avoid per-call parsing.
///
/// - Construct with [`pc_encoding_params_default_points`], [`pc_encoding_params_default_gsplat`]
///   or [`pc_encoding_params_from_toml`].
/// - Use with `pc_point_encode_with_params` / `pc_gsplat_encode_with_params`.
/// - Free with [`pc_encoding_params_free`].
///
/// The handle is immutable and can be shared across threads.
typedef struct pcencodingparamsopaque pcencodingparamsopaque;

/// Metadata for point-cloud decoding.
///
/// `point_count` is valid after a successful decode.
typedef struct pcpointmeta
    {
    uint32_t point_count;
    uint32_t _reserved0;
    } pcpointmeta;

/// 3-float vector (Unity `Vector3` compatible layout).
typedef struct pcvec3
    {
    float x;
    float y;
    float z;
    } pcvec3;

/// 4-float vector (Unity `Vector4` compatible layout).
typedef struct pcvec4
    {
    float x;
    float y;
    float z;
    float w;
    } pcvec4;

/// Returned view into an encoder-owned byte buffer.
typedef struct pcbyteslice
    {
    const uint8_t* data;
    uint64_t len;
    } pcbyteslice;

/// Metadata (count always valid after decode; bounds valid after write_to_buffers).
typedef struct pcgsplatmeta
    {
    uint32_t splat_count;
    uint8_t sh_bands;
    uint8_t _reserved0;
    uint16_t _reserved1;
    pcvec3 bounds_center;
    pcvec3 bounds_extents;
    } pcgsplatmeta;

/// Mutable slice for `f32` output.
typedef struct pcmutslicef32
    {
    float* data;
    uint64_t len;
    } pcmutslicef32;

/// Mutable slice for `u8` output.
typedef struct pcmutsliceu8
    {
    uint8_t* data;
    uint64_t len;
    } pcmutsliceu8;

/// Immutable slice for `f32` input.
typedef struct pcslicef32
    {
    const float* data;
    uint64_t len;
    } pcslicef32;

/// Immutable slice for `u8` input.
typedef struct pcsliceu8
    {
    const uint8_t* data;
    uint64_t len;
    } pcsliceu8;

///A pointer to an array of data someone else owns which may not be modified.
typedef struct sliceu8
    {
    ///Pointer to start of immutable data.
    const uint8_t* data;
    ///Number of elements.
    uint64_t len;
    } sliceu8;

/// Mutable slice for `PcVec3` output.
typedef struct pcmutslicevec3
    {
    pcvec3* data;
    uint64_t len;
    } pcmutslicevec3;

/// Mutable slice for `PcVec4` output.
typedef struct pcmutslicevec4
    {
    pcvec4* data;
    uint64_t len;
    } pcmutslicevec4;

/// Flattened point-cloud IO buffers.
///
/// Positions are `XYZXYZ...` and colors are `RGBRGB...`.
typedef struct pcpointinbuffers
    {
    pcslicef32 positions;
    pcsliceu8 colors;
    } pcpointinbuffers;

/// Flattened point-cloud output buffers.
typedef struct pcpointoutbuffers
    {
    pcmutslicef32 positions;
    pcmutsliceu8 colors;
    } pcpointoutbuffers;

/// Caller-provided output buffers (AoS arrays).
typedef struct pcgsplatoutbuffers
    {
    pcmutslicevec3 positions;
    pcmutslicevec4 colors;
    pcmutslicevec3 scales;
    pcmutslicevec4 rotations;
    } pcgsplatoutbuffers;


/// Return the last error message for the calling thread (null-terminated).
const int8_t* pc_last_error_message();

/// Clear last error for the calling thread.
void pc_clear_last_error();

/// Create a decoder handle (owning an internal `Vec<GaussianSplatF32>` reused across runs).
pcstatus pc_gsplat_decoder_create(void** out_handle);

/// Free a decoder handle (safe to call with null).
void pc_gsplat_decoder_free(void* handle);

/// Decode bytes into the decoder’s internal `Vec<GaussianSplatF32>`.
/// Returns meta with count; bounds are produced in `pc_gsplat_decoder_write_to_buffers`.
pcstatus pc_gsplat_decoder_decode_from_bytes(void* handle, sliceu8 data, pcgsplatmeta* out_meta);

/// Convert decoded splats into caller-provided output buffers.
/// Writes the first N elements (N = last decoded `splat_count`).
/// Also computes bounds and returns them in `out_meta`.
pcstatus pc_gsplat_decoder_write_to_buffers(void* handle, pcgsplatoutbuffers out_buffers, pcgsplatmeta* out_meta);

/// Create a gsplat encoder handle.
void* pc_gsplat_encoder_create();

/// Free a gsplat encoder handle.
void pc_gsplat_encoder_free(void* handle);

/// Encode gsplats from SoA buffers.
///
/// Returns a view into an internal buffer owned by `handle`.
///
/// This uses default encoding parameters. For custom parameters, use
/// [`pc_gsplat_encode_with_params`].
bool pc_gsplat_encode(void* handle, pcgsplatoutbuffers input, pcbyteslice* out_bytes);

/// Encode gsplats from SoA buffers using explicit encoding parameters.
///
/// If `prms` is null, defaults are used.
bool pc_gsplat_encode_with_params(void* handle, pcgsplatoutbuffers input, const pcencodingparamsopaque* prms, pcbyteslice* out_bytes);

/// Create a point encoder handle.
void* pc_point_encoder_create();

/// Free a point encoder handle created by [`pc_point_encoder_create`].
void pc_point_encoder_free(void* handle);

/// Encode a flattened point cloud (`XYZXYZ...` + `RGBRGB...`) into `spatial_codecs` bytes.
///
/// Returns a view into an internal buffer owned by `handle`. The returned pointer stays valid
/// until the next call to this encoder handle or until the handle is freed.
///
/// This uses default encoding parameters. For custom parameters, use
/// [`pc_point_encode_with_params`].
bool pc_point_encode(void* handle, pcpointinbuffers input, pcbyteslice* out_bytes);

/// Encode a flattened point cloud (`XYZXYZ...` + `RGBRGB...`) into `spatial_codecs` bytes,
/// using explicit encoding parameters.
///
/// If `prms` is null, defaults are used.
bool pc_point_encode_with_params(void* handle, pcpointinbuffers input, const pcencodingparamsopaque* prms, pcbyteslice* out_bytes);

/// Create default encoding parameters for point encoding.
///
/// The returned handle must be freed with [`pc_encoding_params_free`].
bool pc_encoding_params_default_points(pcencodingparamsopaque** output);

/// Create default encoding parameters for Gaussian splat encoding.
///
/// The returned handle must be freed with [`pc_encoding_params_free`].
bool pc_encoding_params_default_gsplat(pcencodingparamsopaque** output);

/// Parse encoding parameters from TOML.
///
/// Intended for configuration-time use; for high-throughput encoding, parse once and reuse.
///
/// The returned handle must be freed with [`pc_encoding_params_free`].
bool pc_encoding_params_from_toml(const uint8_t* toml_ptr, uint64_t toml_len, pcencodingparamsopaque** output);

/// Free an encoding parameters handle created by `pc_encoding_params_*`.
void pc_encoding_params_free(pcencodingparamsopaque* ptr);

/// Create a point decoder handle.
void* pc_point_decoder_create();

/// Free a point decoder handle.
void pc_point_decoder_free(void* handle);

/// Decode bytes into the decoder’s internal buffers.
///
/// This is the first step of a two-step decode:
/// 1) [`pc_point_decoder_decode_from_bytes`]: parse bytes and determine `point_count`.
/// 2) [`pc_point_decoder_write_to_buffers`]: copy into caller-provided buffers.
///
/// This enables dynamic buffer sizing, similar to the gsplat decode API.
pcstatus pc_point_decoder_decode_from_bytes(void* handle, sliceu8 data, pcpointmeta* out_meta);

/// Copy the last decoded point cloud into caller-provided buffers.
///
/// `out_meta->point_count` will be updated to the decoded count (and can be used by callers
/// to validate they allocated the expected size).
pcstatus pc_point_decoder_write_to_buffers(void* handle, pcpointoutbuffers output, pcpointmeta* out_meta);

/// Decode `data` into flattened output buffers.
///
/// The output buffers must have capacity for `num_points * 3` values each.
/// The number of points decoded is returned via `output_points`.
bool pc_point_decode_into(void* handle, sliceu8 data, pcpointoutbuffers output, uint64_t* output_points);


#ifdef __cplusplus
}
#endif

#endif /* SPATIAL_CODECS_INTEROPS_H */