bindings/csharp/SpatialCodecsInterop.cs

// Automatically generated by Interoptopus.

#pragma warning disable 0105
using System;
using System.Collections;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using Be.Ugent;
#pragma warning restore 0105

namespace Be.Ugent
{
    public static partial class SpatialCodecsInterop
    {
        public const string NativeLib = "spatial_codecs";

        static SpatialCodecsInterop()
        {
        }


        /// Return the last error message for the calling thread (null-terminated).
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_last_error_message")]
        public static extern IntPtr pc_last_error_message();

        /// Clear last error for the calling thread.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_clear_last_error")]
        public static extern void pc_clear_last_error();

        /// Create a decoder handle (owning an internal `Vec<GaussianSplatF32>` reused across runs).
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_gsplat_decoder_create")]
        public static extern PcStatus pc_gsplat_decoder_create(ref IntPtr out_handle);

        /// Free a decoder handle (safe to call with null).
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_gsplat_decoder_free")]
        public static extern void pc_gsplat_decoder_free(IntPtr handle);

        /// Decode bytes into the decoder’s internal `Vec<GaussianSplatF32>`.
        /// Returns meta with count; bounds are produced in `pc_gsplat_decoder_write_to_buffers`.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_gsplat_decoder_decode_from_bytes")]
        public static extern PcStatus pc_gsplat_decoder_decode_from_bytes(IntPtr handle, Sliceu8 data, out PcGsplatMeta out_meta);

        /// Decode bytes into the decoder’s internal `Vec<GaussianSplatF32>`.
        /// Returns meta with count; bounds are produced in `pc_gsplat_decoder_write_to_buffers`.
        public static PcStatus pc_gsplat_decoder_decode_from_bytes(IntPtr handle, byte[] data, out PcGsplatMeta out_meta)
        {
            var data_pinned = GCHandle.Alloc(data, GCHandleType.Pinned);
            var data_slice = new Sliceu8(data_pinned, (ulong) data.Length);
            try
            {
                return pc_gsplat_decoder_decode_from_bytes(handle, data_slice, out out_meta);;
            }
            finally
            {
                data_pinned.Free();
            }
        }

        /// Convert decoded splats into caller-provided output buffers.
        /// Writes the first N elements (N = last decoded `splat_count`).
        /// Also computes bounds and returns them in `out_meta`.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_gsplat_decoder_write_to_buffers")]
        public static extern PcStatus pc_gsplat_decoder_write_to_buffers(IntPtr handle, PcGsplatOutBuffers out_buffers, out PcGsplatMeta out_meta);

        /// Create a gsplat encoder handle.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_gsplat_encoder_create")]
        public static extern IntPtr pc_gsplat_encoder_create();

        /// Free a gsplat encoder handle.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_gsplat_encoder_free")]
        public static extern void pc_gsplat_encoder_free(IntPtr handle);

        /// Encode gsplats from SoA buffers.
        ///
        /// Returns a view into an internal buffer owned by `handle`.
        ///
        /// This uses default encoding parameters. For custom parameters, use
        /// [`pc_gsplat_encode_with_params`].
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_gsplat_encode")]
        public static extern bool pc_gsplat_encode(IntPtr handle, PcGsplatOutBuffers input, out PcByteSlice out_bytes);

        /// Encode gsplats from SoA buffers using explicit encoding parameters.
        ///
        /// If `prms` is null, defaults are used.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_gsplat_encode_with_params")]
        public static extern bool pc_gsplat_encode_with_params(IntPtr handle, PcGsplatOutBuffers input, IntPtr prms, out PcByteSlice out_bytes);

        /// Create a point encoder handle.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_point_encoder_create")]
        public static extern IntPtr pc_point_encoder_create();

        /// Free a point encoder handle created by [`pc_point_encoder_create`].
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_point_encoder_free")]
        public static extern void pc_point_encoder_free(IntPtr handle);

        /// Encode a flattened point cloud (`XYZXYZ...` + `RGBRGB...`) into `spatial_codecs` bytes.
        ///
        /// Returns a view into an internal buffer owned by `handle`. The returned pointer stays valid
        /// until the next call to this encoder handle or until the handle is freed.
        ///
        /// This uses default encoding parameters. For custom parameters, use
        /// [`pc_point_encode_with_params`].
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_point_encode")]
        public static extern bool pc_point_encode(IntPtr handle, PcPointInBuffers input, out PcByteSlice out_bytes);

        /// Encode a flattened point cloud (`XYZXYZ...` + `RGBRGB...`) into `spatial_codecs` bytes,
        /// using explicit encoding parameters.
        ///
        /// If `prms` is null, defaults are used.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_point_encode_with_params")]
        public static extern bool pc_point_encode_with_params(IntPtr handle, PcPointInBuffers input, IntPtr prms, out PcByteSlice out_bytes);

        /// Create default encoding parameters for point encoding.
        ///
        /// The returned handle must be freed with [`pc_encoding_params_free`].
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_encoding_params_default_points")]
        public static extern bool pc_encoding_params_default_points(ref IntPtr output);

        /// Create default encoding parameters for Gaussian splat encoding.
        ///
        /// The returned handle must be freed with [`pc_encoding_params_free`].
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_encoding_params_default_gsplat")]
        public static extern bool pc_encoding_params_default_gsplat(ref IntPtr output);

        /// Parse encoding parameters from TOML.
        ///
        /// Intended for configuration-time use; for high-throughput encoding, parse once and reuse.
        ///
        /// The returned handle must be freed with [`pc_encoding_params_free`].
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_encoding_params_from_toml")]
        public static extern bool pc_encoding_params_from_toml(ref byte toml_ptr, ulong toml_len, ref IntPtr output);

        /// Free an encoding parameters handle created by `pc_encoding_params_*`.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_encoding_params_free")]
        public static extern void pc_encoding_params_free(IntPtr ptr);

        /// Create a point decoder handle.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_point_decoder_create")]
        public static extern IntPtr pc_point_decoder_create();

        /// Free a point decoder handle.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_point_decoder_free")]
        public static extern void pc_point_decoder_free(IntPtr handle);

        /// Decode bytes into the decoder’s internal buffers.
        ///
        /// This is the first step of a two-step decode:
        /// 1) [`pc_point_decoder_decode_from_bytes`]: parse bytes and determine `point_count`.
        /// 2) [`pc_point_decoder_write_to_buffers`]: copy into caller-provided buffers.
        ///
        /// This enables dynamic buffer sizing, similar to the gsplat decode API.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_point_decoder_decode_from_bytes")]
        public static extern PcStatus pc_point_decoder_decode_from_bytes(IntPtr handle, Sliceu8 data, out PcPointMeta out_meta);

        /// Decode bytes into the decoder’s internal buffers.
        ///
        /// This is the first step of a two-step decode:
        /// 1) [`pc_point_decoder_decode_from_bytes`]: parse bytes and determine `point_count`.
        /// 2) [`pc_point_decoder_write_to_buffers`]: copy into caller-provided buffers.
        ///
        /// This enables dynamic buffer sizing, similar to the gsplat decode API.
        public static PcStatus pc_point_decoder_decode_from_bytes(IntPtr handle, byte[] data, out PcPointMeta out_meta)
        {
            var data_pinned = GCHandle.Alloc(data, GCHandleType.Pinned);
            var data_slice = new Sliceu8(data_pinned, (ulong) data.Length);
            try
            {
                return pc_point_decoder_decode_from_bytes(handle, data_slice, out out_meta);;
            }
            finally
            {
                data_pinned.Free();
            }
        }

        /// Copy the last decoded point cloud into caller-provided buffers.
        ///
        /// `out_meta->point_count` will be updated to the decoded count (and can be used by callers
        /// to validate they allocated the expected size).
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_point_decoder_write_to_buffers")]
        public static extern PcStatus pc_point_decoder_write_to_buffers(IntPtr handle, PcPointOutBuffers output, out PcPointMeta out_meta);

        /// Decode `data` into flattened output buffers.
        ///
        /// The output buffers must have capacity for `num_points * 3` values each.
        /// The number of points decoded is returned via `output_points`.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pc_point_decode_into")]
        public static extern bool pc_point_decode_into(IntPtr handle, Sliceu8 data, PcPointOutBuffers output, out ulong output_points);

        /// Decode `data` into flattened output buffers.
        ///
        /// The output buffers must have capacity for `num_points * 3` values each.
        /// The number of points decoded is returned via `output_points`.
        public static bool pc_point_decode_into(IntPtr handle, byte[] data, PcPointOutBuffers output, out ulong output_points)
        {
            var data_pinned = GCHandle.Alloc(data, GCHandleType.Pinned);
            var data_slice = new Sliceu8(data_pinned, (ulong) data.Length);
            try
            {
                return pc_point_decode_into(handle, data_slice, output, out output_points);;
            }
            finally
            {
                data_pinned.Free();
            }
        }

    }

    /// Status codes for FFI calls.
    public enum PcStatus
    {
        Ok = 0,
        NullPointer = 1,
        InvalidSlice = 2,
        DecodeFailed = 3,
        SizeOverflow = 4,
        Panic = 5,
    }

    /// Returned view into an encoder-owned byte buffer.
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcByteSlice
    {
        public IntPtr data;
        public ulong len;
    }

    /// Metadata (count always valid after decode; bounds valid after write_to_buffers).
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcGsplatMeta
    {
        public uint splat_count;
        public byte sh_bands;
        public byte _reserved0;
        public ushort _reserved1;
        public PcVec3 bounds_center;
        public PcVec3 bounds_extents;
    }

    /// Caller-provided output buffers (AoS arrays).
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcGsplatOutBuffers
    {
        public PcMutSliceVec3 positions;
        public PcMutSliceVec4 colors;
        public PcMutSliceVec3 scales;
        public PcMutSliceVec4 rotations;
    }

    /// Mutable slice for `f32` output.
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcMutSliceF32
    {
        public IntPtr data;
        public ulong len;
    }

    /// Mutable slice for `u8` output.
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcMutSliceU8
    {
        public IntPtr data;
        public ulong len;
    }

    /// Mutable slice for `PcVec3` output.
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcMutSliceVec3
    {
        public IntPtr data;
        public ulong len;
    }

    /// Mutable slice for `PcVec4` output.
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcMutSliceVec4
    {
        public IntPtr data;
        public ulong len;
    }

    /// Flattened point-cloud IO buffers.
    ///
    /// Positions are `XYZXYZ...` and colors are `RGBRGB...`.
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcPointInBuffers
    {
        public PcSliceF32 positions;
        public PcSliceU8 colors;
    }

    /// Metadata for point-cloud decoding.
    ///
    /// `point_count` is valid after a successful decode.
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcPointMeta
    {
        public uint point_count;
        public uint _reserved0;
    }

    /// Flattened point-cloud output buffers.
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcPointOutBuffers
    {
        public PcMutSliceF32 positions;
        public PcMutSliceU8 colors;
    }

    /// Immutable slice for `f32` input.
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcSliceF32
    {
        public IntPtr data;
        public ulong len;
    }

    /// Immutable slice for `u8` input.
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcSliceU8
    {
        public IntPtr data;
        public ulong len;
    }

    /// 3-float vector (Unity `Vector3` compatible layout).
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcVec3
    {
        public float x;
        public float y;
        public float z;
    }

    /// 4-float vector (Unity `Vector4` compatible layout).
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct PcVec4
    {
        public float x;
        public float y;
        public float z;
        public float w;
    }

    ///A pointer to an array of data someone else owns which may not be modified.
    [Serializable]
    [StructLayout(LayoutKind.Sequential)]
    public partial struct Sliceu8
    {
        ///Pointer to start of immutable data.
        IntPtr data;
        ///Number of elements.
        ulong len;
    }

    public partial struct Sliceu8 : IEnumerable<byte>
    {
        public Sliceu8(GCHandle handle, ulong count)
        {
            this.data = handle.AddrOfPinnedObject();
            this.len = count;
        }
        public Sliceu8(IntPtr handle, ulong count)
        {
            this.data = handle;
            this.len = count;
        }
        public byte this[int i]
        {
            get
            {
                if (i >= Count) throw new IndexOutOfRangeException();
                var size = Marshal.SizeOf(typeof(byte));
                var ptr = new IntPtr(data.ToInt64() + i * size);
                return Marshal.PtrToStructure<byte>(ptr);
            }
        }
        public byte[] Copied
        {
            get
            {
                var rval = new byte[len];
                for (var i = 0; i < (int) len; i++) {
                    rval[i] = this[i];
                }
                return rval;
            }
        }
        public int Count => (int) len;
        public IEnumerator<byte> GetEnumerator()
        {
            for (var i = 0; i < (int)len; ++i)
            {
                yield return this[i];
            }
        }
        IEnumerator IEnumerable.GetEnumerator()
        {
            return this.GetEnumerator();
        }
    }




    public class InteropException<T> : Exception
    {
        public T Error { get; private set; }

        public InteropException(T error): base($"Something went wrong: {error}")
        {
            Error = error;
        }
    }

}
